<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.lab2.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_nav_gallery"
            app:destination="@id/nav_gallery" />
        <action
            android:id="@+id/action_nav_home_to_nav_settings"
            app:destination="@id/nav_settings" />
        <action
            android:id="@+id/action_nav_home_to_nav_slideshow"
            app:destination="@id/nav_slideshow" />
        <action
            android:id="@+id/action_nav_home_to_nav_tabs"
            app:destination="@id/nav_tabs" />
    </fragment>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.lab2.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.lab2.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.lab2.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/nav_tabs"
        android:name="com.example.lab2.ui.main.PlaceholderFragment"
        android:label="@string/menu_tabs"
        tools:layout="@layout/fragment_tabs" />

</navigation>